Wed May 14 12:18:12 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* strports.c (scm_eval_string): New function.
	(scm_eval_0str): Trivially re-implemented in terms of
	scm_eval_string.
	* strports.h (scm_eval_string): New extern decl.

	* net_db.c (h_errno): Add extern decl for this.

	* fports.c (local_pclose): New function.
	(scm_pipob): Use it in the initializer here.

	From Tim Pierce:
	* net_db.c (scm_gethost, scm_getproto, scm_getnet, scm_getserv):
	Use a meaningful error message when signalling an error.  For
	this, scm_gethost must check h_errno rather than errno.

Tue May 13 16:40:06 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.in: Regenerated, using automake-1.1p.

Tue May 13 04:34:52 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* socket.c (scm_addr_vector): use SCM_UNDEFINED in scm_listify,
	not SCM_UNSPECIFIED.

	* script.c (scm_compile_shell_switches): don't append (quit) if
	interactive.
	(scm_shell): call scm_exit_status and exit on the result of the
	evaluation.

Mon May 12 17:23:58 1997  Jim Blandy  <jimb@floss.cyclic.com>

	Ensure that shared substrings are handled properly when passed to
	a system call or other foreign function.  Many thanks to Tim
	Pierce!
	* symbols.h (SCM_COERCE_SUBSTR): new macro.
	* filesys.c (scm_chmod, scm_rename, scm_delete_file, scm_mkdir,
 	scm_rmdir, scm_opendir, scm_chdir, scm_symlink, scm_readlink,
 	scm_lstat), ports.c (scm_sys_make_void_port), posix.c (scm_utime,
 	scm_putenv, scm_setlocale, scm_mknod), stime.c (setzone,
 	scm_strftime), vports.c (scm_make_soft_port), backtrace.c
 	(scm_display_error_message): use RO macros when strings may be RO.
	* error.c (scm_error_scm), filesys.c (scm_chown, scm_chmod,
 	scm_rename, scm_delete_file, scm_mkdir, scm_rmdir, scm_opendir,
 	scm_chdir, scm_symlink, scm_readlink, scm_lstat), ioext.c
 	(scm_freopen, scm_duplicate_port, scm_fdopen), net_db.c
 	(scm_gethost, scm_getnet, scm_getproto, scm_getserv), ports.c